--- a/src/gestorcitas/views/MainWindowView.fxml
+++ b/src/gestorcitas/views/MainWindowView.fxml
@@ -26,49 +26,49 @@
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
-          <Menu text="Clínica">
+          <Menu text="%menu.clinic">
             <items>
-              <MenuItem onAction="#onChangeName" text="Cambiar nombre..." />
-                  <MenuItem onAction="#onSave" text="Guardar">
+              <MenuItem onAction="#onChangeName" text="%menu.clinic.setName" />
+                  <MenuItem onAction="#onSave" text="%menu.clinic.save">
                      <accelerator>
                         <KeyCodeCombination alt="UP" code="S" control="UP" meta="UP" shift="UP" shortcut="DOWN" />
                      </accelerator></MenuItem>
-                  <MenuItem onAction="#onDiscardChanges" text="Descartar todos los cambios" />
-                  <Menu text="Idioma">
+                  <MenuItem onAction="#onDiscardChanges" text="%menu.clinic.discard" />
+                  <Menu text="%menu.clinic.lang">
                      <items>
-                        <RadioMenuItem selected="true" text="Español">
+                        <RadioMenuItem selected="true" text="%menu.clinic.lang.es">
                            <toggleGroup>
                               <ToggleGroup fx:id="language" />
                            </toggleGroup>
                         </RadioMenuItem>
                      </items>
                   </Menu>
-                  <MenuItem onAction="#onQuit" text="Salir">
+                  <MenuItem onAction="#onQuit" text="%menu.clinic.quit">
                      <accelerator>
                         <KeyCodeCombination alt="UP" code="Q" control="UP" meta="UP" shift="UP" shortcut="DOWN" />
                      </accelerator>
                   </MenuItem>
             </items>
           </Menu>
-          <Menu text="Añadir">
+          <Menu text="%menu.add">
             <items>
-              <MenuItem onAction="#onAddAppointment" text="Cita...">
+              <MenuItem onAction="#onAddAppointment" text="%menu.add.appointment">
                      <accelerator>
                         <KeyCodeCombination alt="UP" code="A" control="UP" meta="UP" shift="UP" shortcut="DOWN" />
                      </accelerator></MenuItem>
-                  <MenuItem onAction="#onAddPatient" text="Paciente...">
+                  <MenuItem onAction="#onAddPatient" text="%menu.add.patient">
                      <accelerator>
                         <KeyCodeCombination alt="UP" code="P" control="UP" meta="UP" shift="UP" shortcut="DOWN" />
                      </accelerator></MenuItem>
-                  <MenuItem onAction="#onAddDoctor" text="Doctor...">
+                  <MenuItem onAction="#onAddDoctor" text="%menu.add.doctor">
                      <accelerator>
                         <KeyCodeCombination alt="UP" code="D" control="UP" meta="UP" shift="UP" shortcut="DOWN" />
                      </accelerator></MenuItem>
             </items>
           </Menu>
-          <Menu text="Ayuda">
+          <Menu text="%menu.help">
             <items>
-              <MenuItem onAction="#onAbout" text="Sobre este programa" />
+              <MenuItem onAction="#onAbout" text="%menu.help.about" />
             </items>
           </Menu>
         </menus>
@@ -77,7 +77,7 @@
    <center>
       <TabPane fx:id="mainTabPane" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
         <tabs>
-          <Tab fx:id="appointmentTab" closable="false" text="Citas">
+          <Tab fx:id="appointmentTab" closable="false" text="%tab.appointments">
                <content>
                   <BorderPane>
                      <top>
@@ -94,12 +94,12 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </padding>
                               </HBox>
-                              <TextField fx:id="appointmentSearchBox" prefHeight="25.0" prefWidth="190.0" promptText="Buscar citas....">
+                              <TextField fx:id="appointmentSearchBox" onAction="#onSearch" prefHeight="25.0" prefWidth="190.0" promptText="%tab.appointments.search.prompt">
                                  <HBox.margin>
                                     <Insets />
                                  </HBox.margin>
                               </TextField>
-                              <Button mnemonicParsing="false" onAction="#onSearch" text="Buscar">
+                              <Button mnemonicParsing="false" onAction="#onSearch" text="%generic.search">
                                  <HBox.margin>
                                     <Insets right="25.0" />
                                  </HBox.margin>
@@ -112,12 +112,12 @@
                            <right>
                               <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0" BorderPane.alignment="CENTER">
                                  <children>
-                                    <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAddAppointment" prefHeight="30.0" prefWidth="75.0" text="Añadir...">
+                                    <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAddAppointment" prefHeight="30.0" prefWidth="75.0" text="%generic.add">
                                        <VBox.margin>
                                           <Insets />
                                        </VBox.margin>
                                     </Button>
-                                    <Button fx:id="removeAppointmentBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRemoveAppointment" prefHeight="30.0" prefWidth="75.0" text="Eliminar">
+                                    <Button fx:id="removeAppointmentBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRemoveAppointment" prefHeight="30.0" prefWidth="75.0" text="%generic.remove">
                                        <VBox.margin>
                                           <Insets bottom="20.0" />
                                        </VBox.margin>
@@ -144,10 +144,10 @@
                            <center>
                               <TableView fx:id="appointmentTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
                                 <columns>
-                                  <TableColumn fx:id="appointmentDateColumn" editable="false" prefWidth="75.0" text="Fecha" />
-                                    <TableColumn fx:id="appointmentTimeColumn" editable="false" prefWidth="75.0" text="Hora" />
-                                    <TableColumn fx:id="appointmentDoctorColumn" editable="false" prefWidth="75.0" text="Doctor" />
-                                    <TableColumn fx:id="appointmentPatientColumn" editable="false" prefWidth="75.0" text="Paciente" />
+                                  <TableColumn fx:id="appointmentDateColumn" editable="false" prefWidth="75.0" text="%generic.date" />
+                                    <TableColumn fx:id="appointmentTimeColumn" editable="false" prefWidth="75.0" text="%generic.time" />
+                                    <TableColumn fx:id="appointmentDoctorColumn" editable="false" prefWidth="75.0" text="%generic.doctor" />
+                                    <TableColumn fx:id="appointmentPatientColumn" editable="false" prefWidth="75.0" text="%generic.patient" />
                                 </columns>
                                  <BorderPane.margin>
                                     <Insets bottom="15.0" left="15.0" />
@@ -162,7 +162,7 @@
                   </BorderPane>
                </content>
             </Tab>
-            <Tab fx:id="patientTab" text="Pacientes">
+            <Tab fx:id="patientTab" text="%tab.patients">
                <content>
                   <BorderPane>
                      <top>
@@ -179,12 +179,12 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </padding>
                               </HBox>
-                              <TextField fx:id="patientSearchBox" prefHeight="25.0" prefWidth="190.0" promptText="Buscar pacientes...">
+                              <TextField fx:id="patientSearchBox" onAction="#onSearch" prefHeight="25.0" prefWidth="190.0" promptText="%tab.patients.search.prompt">
                                  <HBox.margin>
                                     <Insets />
                                  </HBox.margin>
                               </TextField>
-                              <Button mnemonicParsing="false" onAction="#onSearch" text="Buscar">
+                              <Button mnemonicParsing="false" onAction="#onSearch" text="%generic.search">
                                  <HBox.margin>
                                     <Insets right="24.0" />
                                  </HBox.margin>
@@ -195,17 +195,17 @@
                      <right>
                         <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
                            <children>
-                              <Button fx:id="showPatientBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onShowPatient" prefHeight="30.0" prefWidth="75.0" text="Mostrar">
+                              <Button fx:id="showPatientBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onShowPatient" prefHeight="30.0" prefWidth="75.0" text="%generic.show">
                                  <VBox.margin>
                                     <Insets />
                                  </VBox.margin>
                               </Button>
-                              <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAddPatient" prefHeight="30.0" prefWidth="75.0" text="Añadir...">
+                              <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAddPatient" prefHeight="30.0" prefWidth="75.0" text="%generic.add">
                                  <VBox.margin>
                                     <Insets />
                                  </VBox.margin>
                               </Button>
-                              <Button fx:id="removePatientBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRemovePatient" prefHeight="30.0" prefWidth="75.0" text="Eliminar">
+                              <Button fx:id="removePatientBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRemovePatient" prefHeight="30.0" prefWidth="75.0" text="%generic.remove">
                                  <VBox.margin>
                                     <Insets />
                                  </VBox.margin>
@@ -219,10 +219,10 @@
                      <center>
                         <TableView fx:id="patientTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
                           <columns>
-                              <TableColumn fx:id="patientPhotoColumn" editable="false" maxWidth="70.0" minWidth="-Infinity" prefWidth="70.0" resizable="false" sortable="false" text="Fotografía" />
-                            <TableColumn fx:id="patientIdColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Identificador" />
-                            <TableColumn fx:id="patientNameColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Nombre" />
-                              <TableColumn fx:id="patientPhoneColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Teléfono" />
+                              <TableColumn fx:id="patientPhotoColumn" editable="false" maxWidth="70.0" minWidth="-Infinity" prefWidth="70.0" resizable="false" sortable="false" text="%table.person.photo" />
+                            <TableColumn fx:id="patientIdColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.id" />
+                            <TableColumn fx:id="patientNameColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.name" />
+                              <TableColumn fx:id="patientPhoneColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.phone" />
                           </columns>
                            <BorderPane.margin>
                               <Insets bottom="15.0" left="15.0" />
@@ -232,7 +232,7 @@
                   </BorderPane>
                </content>
             </Tab>
-            <Tab fx:id="doctorTab" text="Doctores">
+            <Tab fx:id="doctorTab" text="%tab.doctors">
                <content>
                   <BorderPane>
                      <top>
@@ -249,12 +249,12 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </padding>
                               </HBox>
-                              <TextField fx:id="doctorSearchBox" prefHeight="25.0" prefWidth="190.0" promptText="Buscar doctores...">
+                              <TextField fx:id="doctorSearchBox" onAction="#onSearch" prefHeight="25.0" prefWidth="190.0" promptText="%tab.doctors.search.prompt">
                                  <HBox.margin>
                                     <Insets />
                                  </HBox.margin>
                               </TextField>
-                              <Button mnemonicParsing="false" onAction="#onSearch" text="Buscar">
+                              <Button mnemonicParsing="false" onAction="#onSearch" text="%generic.search">
                                  <HBox.margin>
                                     <Insets right="24.0" />
                                  </HBox.margin>
@@ -268,17 +268,17 @@
                      <right>
                         <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
                            <children>
-                              <Button fx:id="showDoctorBtn" disable="true" minHeight="30.0" minWidth="50.0" mnemonicParsing="false" onAction="#onShowDoctor" prefWidth="75.0" text="Mostrar">
+                              <Button fx:id="showDoctorBtn" disable="true" minHeight="30.0" minWidth="50.0" mnemonicParsing="false" onAction="#onShowDoctor" prefWidth="75.0" text="%generic.show">
                                  <VBox.margin>
                                     <Insets />
                                  </VBox.margin>
                               </Button>
-                              <Button minHeight="30.0" minWidth="50.0" mnemonicParsing="false" onAction="#onAddDoctor" prefWidth="75.0" text="Añadir...">
+                              <Button minHeight="30.0" minWidth="50.0" mnemonicParsing="false" onAction="#onAddDoctor" prefWidth="75.0" text="%generic.add">
                                  <VBox.margin>
                                     <Insets />
                                  </VBox.margin>
                               </Button>
-                              <Button fx:id="removeDoctorBtn" disable="true" minHeight="30.0" minWidth="50.0" mnemonicParsing="false" onAction="#onRemoveDoctor" prefWidth="75.0" text="Eliminar">
+                              <Button fx:id="removeDoctorBtn" disable="true" minHeight="30.0" minWidth="50.0" mnemonicParsing="false" onAction="#onRemoveDoctor" prefWidth="75.0" text="%generic.remove">
                                  <VBox.margin>
                                     <Insets />
                                  </VBox.margin>
@@ -292,13 +292,13 @@
                      <center>
                         <TableView fx:id="doctorTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
                           <columns>
-                              <TableColumn fx:id="doctorPhotoColumn" editable="false" maxWidth="70.0" minWidth="-Infinity" prefWidth="70.0" resizable="false" sortable="false" text="Fotografía" />
-                              <TableColumn fx:id="doctorIdColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Identificador" />
-                              <TableColumn fx:id="doctorNameColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Nombre" />
-                              <TableColumn fx:id="doctorPhoneColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Teléfono" />
-                              <TableColumn fx:id="doctorVisitDaysColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Días consulta" />
-                              <TableColumn fx:id="doctorVisitTimeColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Horas consulta" />
-                              <TableColumn fx:id="doctorRoomColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Sala" />
+                              <TableColumn fx:id="doctorPhotoColumn" editable="false" maxWidth="70.0" minWidth="-Infinity" prefWidth="70.0" resizable="false" sortable="false" text="%table.person.photo" />
+                              <TableColumn fx:id="doctorIdColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.id" />
+                              <TableColumn fx:id="doctorNameColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.name" />
+                              <TableColumn fx:id="doctorPhoneColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.phone" />
+                              <TableColumn fx:id="doctorVisitDaysColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.doctor.visitDays" />
+                              <TableColumn fx:id="doctorVisitTimeColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.doctor.visitHours" />
+                              <TableColumn fx:id="doctorRoomColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.doctor.room" />
                           </columns>
                            <BorderPane.margin>
                               <Insets bottom="15.0" left="15.0" />
