--- a/src/gestorcitas/views/DoctorForm.fxml
+++ b/src/gestorcitas/views/DoctorForm.fxml
@@ -3,9 +3,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckMenuItem?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -19,12 +19,18 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <GridPane layoutX="21.0" layoutY="46.0" prefHeight="200.0" prefWidth="244.0">
+      <Text fill="#726868" layoutX="21.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Datos personales">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Text>
+      <Line endX="307.0" layoutX="128.0" layoutY="39.0" startX="-109.0" />
+      <GridPane layoutX="27.0" layoutY="53.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="225.0" prefWidth="253.0">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="107.0" minWidth="86.0" prefWidth="94.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="100.0" prefWidth="150.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="107.0" minWidth="68.0" prefWidth="85.0000244140625" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="169.5999755859375" minWidth="100.0" prefWidth="169.5999755859375" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints />
@@ -54,10 +60,46 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </Text>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField prefHeight="25.0" prefWidth="141.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <children>
+                  <TextField alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="120.0">
+                     <VBox.margin>
+                        <Insets top="18.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Label alignment="CENTER_RIGHT" text="Label" />
+               </children>
+            </VBox>
+            <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <children>
+                  <TextField alignment="BASELINE_LEFT">
+                     <VBox.margin>
+                        <Insets top="18.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Label alignment="CENTER_RIGHT" text="Label" />
+               </children>
+            </VBox>
+            <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <children>
+                  <TextField alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="100.0">
+                     <VBox.margin>
+                        <Insets top="18.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Label alignment="CENTER_RIGHT" text="El DNI no contiene letra." />
+               </children>
+            </VBox>
+            <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <children>
+                  <TextField alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="100.0">
+                     <VBox.margin>
+                        <Insets top="18.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Label alignment="CENTER_RIGHT" text="Label" />
+               </children>
+            </VBox>
          </children>
       </GridPane>
       <VBox alignment="TOP_RIGHT" layoutX="285.0" layoutY="46.0" prefHeight="200.0" prefWidth="144.0">
@@ -77,10 +119,10 @@
             </Button>
          </children>
       </VBox>
-      <GridPane layoutX="20.0" layoutY="308.0" prefHeight="180.0" prefWidth="244.0">
+      <GridPane layoutX="20.0" layoutY="320.0" prefHeight="180.0" prefWidth="417.0">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="107.0" minWidth="86.0" prefWidth="94.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="100.0" prefWidth="150.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="116.0" minWidth="86.0" prefWidth="116.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="100.0" prefWidth="301.0" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints />
@@ -90,42 +132,60 @@
             <RowConstraints minHeight="15.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" text="Hora de Inicio " GridPane.rowIndex="1">
+            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" text="Hora de inicio " GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Text>
-            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" text="Hora de Salida" GridPane.rowIndex="2">
+            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" text="Hora de salida" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Text>
-            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" text="Sala" GridPane.rowIndex="3">
+            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" text="Sala" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Text>
-            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" text="Días" GridPane.rowIndex="4">
+            <ChoiceBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" text="Días de consulta" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Text>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField prefHeight="25.0" prefWidth="141.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <ChoiceBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <MenuButton mnemonicParsing="false" prefHeight="25.0" prefWidth="159.0" text="Opciones" GridPane.columnIndex="1" GridPane.rowIndex="4">
-              <items>
-                  <CheckMenuItem mnemonicParsing="false" text="Lunes" />
-                  <CheckMenuItem mnemonicParsing="false" text="Martes" />
-                  <CheckMenuItem mnemonicParsing="false" text="Miércoles" />
-                  <CheckMenuItem mnemonicParsing="false" text="Jueves" />
-                  <CheckMenuItem mnemonicParsing="false" text="Viernes" />
-                  <CheckMenuItem mnemonicParsing="false" text="Sábado" />
-                  <CheckMenuItem mnemonicParsing="false" text="Domingo" />
-              </items>
-            </MenuButton>
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="14.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <children>
+                  <CheckBox mnemonicParsing="false" text="L" />
+                  <CheckBox mnemonicParsing="false" text="M" />
+                  <CheckBox mnemonicParsing="false" text="X" />
+                  <CheckBox mnemonicParsing="false" text="J" />
+                  <CheckBox mnemonicParsing="false" text="V" />
+                  <CheckBox mnemonicParsing="false" text="S" textFill="#ff0101" />
+                  <CheckBox mnemonicParsing="false" text="D" textFill="#ff0101" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="3.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <children>
+                  <ChoiceBox prefWidth="55.0" />
+                  <Label text=":" />
+                  <ChoiceBox prefWidth="55.0" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="3.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <children>
+                  <ChoiceBox prefWidth="55.0" />
+                  <Label text=":" />
+                  <ChoiceBox prefWidth="55.0" />
+               </children>
+            </HBox>
          </children>
       </GridPane>
+      <Text fill="#726868" layoutX="19.0" layoutY="312.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ajustes de consultas">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Text>
+      <Line endX="307.0" layoutX="126.0" layoutY="319.0" startX="-109.0" />
       <HBox alignment="BOTTOM_RIGHT" layoutX="250.0" layoutY="450.0" prefHeight="100.0" prefWidth="200.0">
          <children>
             <Button mnemonicParsing="false" text="Guardar">
@@ -140,17 +200,5 @@
             </Button>
          </children>
       </HBox>
-      <Text fill="#726868" layoutX="21.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Datos Personales">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Text>
-      <Line endX="307.0" layoutX="128.0" layoutY="39.0" startX="-109.0" />
-      <Text fill="#726868" layoutX="21.0" layoutY="293.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Horario">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Text>
-      <Line endX="307.0" layoutX="128.0" layoutY="300.0" startX="-109.0" />
    </children>
 </AnchorPane>
