--- a/src/gestorcitas/views/PatientForm.fxml
+++ b/src/gestorcitas/views/PatientForm.fxml
@@ -17,26 +17,12 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorcitas.controllers.PatientFormController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="300.0" prefWidth="555.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorcitas.controllers.PatientFormController">
    <children>
-      <HBox alignment="BOTTOM_RIGHT" layoutX="249.0" layoutY="200.0" prefHeight="100.0" prefWidth="200.0">
-         <children>
-            <Button mnemonicParsing="false" text="Guardar">
-               <HBox.margin>
-                  <Insets bottom="20.0" right="20.0" />
-               </HBox.margin>
-            </Button>
-            <Button mnemonicParsing="false" text="Cancelar">
-               <HBox.margin>
-                  <Insets bottom="20.0" right="20.0" />
-               </HBox.margin>
-            </Button>
-         </children>
-      </HBox>
-      <GridPane layoutX="17.0" layoutY="43.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="232.0" prefWidth="255.0">
+      <GridPane layoutX="17.0" layoutY="43.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="232.0" prefWidth="391.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="107.0" minWidth="68.0" prefWidth="85.0000244140625" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="169.5999755859375" minWidth="100.0" prefWidth="169.5999755859375" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="100.0" prefWidth="169.5999755859375" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints />
@@ -46,71 +32,71 @@
             <RowConstraints minHeight="15.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre" GridPane.rowIndex="1">
+            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" text="%table.person.name" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Text>
-            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" text="Apellidos" GridPane.rowIndex="2">
+            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" text="%table.person.surname" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Text>
-            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" text="D.N.I" GridPane.rowIndex="3">
+            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" text="%table.person.id" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Text>
-            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" text="Teléfono" GridPane.rowIndex="4">
+            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" text="%table.person.phone" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Text>
             <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <TextField alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="120.0">
+                  <TextField fx:id="nameField" alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="160.0">
                      <VBox.margin>
                         <Insets top="18.0" />
                      </VBox.margin>
                   </TextField>
-                  <Label alignment="CENTER_RIGHT" text="Label" />
+                  <Label fx:id="nameErrorLabel" alignment="CENTER_RIGHT" textFill="RED" visible="false" />
                </children>
             </VBox>
             <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
-                  <TextField alignment="BASELINE_LEFT">
+                  <TextField fx:id="surnameField" alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="260.0">
                      <VBox.margin>
                         <Insets top="18.0" />
                      </VBox.margin>
                   </TextField>
-                  <Label alignment="CENTER_RIGHT" text="Label" />
+                  <Label fx:id="surnameErrorLabel" alignment="CENTER_RIGHT" textFill="RED" visible="false" />
                </children>
             </VBox>
             <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <children>
-                  <TextField alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="100.0">
+                  <TextField fx:id="idField" alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="110.0">
                      <VBox.margin>
                         <Insets top="18.0" />
                      </VBox.margin>
                   </TextField>
-                  <Label alignment="CENTER_RIGHT" text="El DNI no contiene letra." />
+                  <Label fx:id="idErrorLabel" alignment="CENTER_RIGHT" textFill="RED" visible="false" />
                </children>
             </VBox>
             <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <children>
-                  <TextField alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="100.0">
+                  <TextField fx:id="phoneField" alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="110.0">
                      <VBox.margin>
                         <Insets top="18.0" />
                      </VBox.margin>
                   </TextField>
-                  <Label alignment="CENTER_RIGHT" text="Label" />
+                  <Label fx:id="phoneErrorLabel" alignment="CENTER_RIGHT" textFill="RED" visible="false" />
                </children>
             </VBox>
          </children>
       </GridPane>
-      <VBox alignment="TOP_RIGHT" layoutX="284.0" layoutY="14.0" prefHeight="200.0" prefWidth="144.0">
+      <VBox alignment="TOP_RIGHT" layoutX="391.0" layoutY="14.0" prefHeight="200.0" prefWidth="144.0">
          <children>
-            <ImageView fitHeight="150.0" fitWidth="144.0" pickOnBounds="true">
+            <ImageView fx:id="photoPreview" fitHeight="150.0" fitWidth="144.0" pickOnBounds="true">
                <image>
                   <Image url="@../resources/img/default.png" />
                </image>
@@ -118,18 +104,35 @@
                   <Rectangle2D minX="150.0" minY="150.0" width="150.0" />
                </viewport>
             </ImageView>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="76.0" text="Cambiar">
+            <Button fx:id="photoChangeBtn" alignment="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="76.0" text="%generic.change">
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
             </Button>
          </children>
       </VBox>
-      <Text fill="#726868" layoutX="17.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Datos personales">
+      <Text fill="#726868" layoutX="17.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="%form.person.title">
          <font>
             <Font size="16.0" />
          </font>
       </Text>
       <Line endX="136.0" layoutX="126.0" layoutY="38.0" startX="-109.0" />
+      <HBox alignment="CENTER_RIGHT" layoutX="391.0" layoutY="252.0" prefHeight="47.0" prefWidth="163.0" spacing="6.0">
+         <children>
+            <Button fx:id="saveBtn" mnemonicParsing="false" onAction="#onSave" text="%generic.save">
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </Button>
+            <Button fx:id="cancelBtn" mnemonicParsing="false" onAction="#onCancel" text="%generic.cancel">
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </Button>
+         </children>
+         <padding>
+            <Insets right="10.0" />
+         </padding>
+      </HBox>
    </children>
 </AnchorPane>
